fix: tableview display